Endpoints now return refresh JWT on success
JWT verification and refresh implemented. The json for both input as output refers to as 'token'.
Updated swagger. Several endpoints renamed (now uses /create /get /update /delete). Schema
of /trips/listOwnerOf, /trips/listMemberOf has changed to allow return of refreshed JWT.
(Refer to swager.yml)
